// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`System should claim rewards 1`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
]
`;

exports[`System should claim rewards 2`] = `
Array [
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "251.9998 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly 1`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "2313899131.2000 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly 2`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "998.8358 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "2313899131.2000 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 1`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "2313899131.2000 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 2`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times 3`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "2313899131.2000 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 4`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times 5`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "2360177113.8240 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 6`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times 7`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "2408306215.7530 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 8`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times 9`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "2458397504.1452 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 10`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times 11`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "2510570931.5316 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 12`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times 13`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "2564956224.3532 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 14`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times 15`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "2621693878.1224 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 16`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times 17`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "2680936274.1371 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 18`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times 19`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "2742848935.0619 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 20`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times 21`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "2807611939.5111 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 22`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times 23`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "2875421519.1022 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 24`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times 25`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "2946491865.4025 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 26`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times 27`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "3021057178.8966 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 28`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times 29`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "3099373997.7131 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 30`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times 31`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "3181723850.5597 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 32`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times 33`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "3268416286.3679 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 34`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times 35`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "3359792342.8377 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 36`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times 37`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "3456228527.7648 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 38`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times 39`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "3558141401.1953 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 40`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times 41`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "3665992863.6542 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 42`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times 43`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "3780296276.6617 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 44`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times 45`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "3901623567.3979 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 46`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times 47`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "4030613500.8551 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 48`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times 49`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "4167981341.5933 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 50`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times 51`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "4314530175.1648 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 52`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times 53`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "4471164218.7824 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 54`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times 55`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "4638904524.9668 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 56`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times 57`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "4818907574.6821 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 58`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times 59`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "5012487373.0220 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 60`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times 61`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "5221141807.5528 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 62`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times 63`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "5446584215.7317 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 64`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times 65`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "5690781344.9537 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 66`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times 67`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "5955999191.9704 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 68`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times 69`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "6244858597.9005 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 70`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times 71`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "6560402977.7723 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 72`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times 73`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "6906181215.6406 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 74`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times 75`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "7286349606.4612 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 76`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times 77`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "7705797839.9813 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 78`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times 79`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "8170305489.5858 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 80`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times 81`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "8686737413.0769 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 82`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times 83`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "9263289061.6615 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 84`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times 85`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "9909796161.7624 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 86`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times 87`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "10638127907.0804 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 88`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times 89`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "11462689131.2891 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 90`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times 91`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "12401065566.7344 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 92`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times 93`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "13474858141.2610 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 94`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times 95`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "14710768621.1601 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 96`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times 97`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "16142021635.0905 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 98`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times 99`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "17810239900.8869 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 100`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should initialize system correctly 1`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "500000000.0000 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "499991784.6456 SNAX",
      },
    ],
  },
]
`;

exports[`System should send correct amounts to special accounts after initialization 1`] = `
Array [
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "499991784.6456 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "500000000.0000 SNAX",
      },
    ],
  },
]
`;

exports[`System should set platforms 1`] = `
Object {
  "cpu_weight": 15000000,
  "net_weight": 10000000,
  "ram_quota": 1018847,
}
`;

exports[`System should set platforms 2`] = `
Object {
  "cpu_weight": 15000000,
  "net_weight": 10000000,
  "ram_quota": 1018847,
}
`;

exports[`System should set platforms 3`] = `
Object {
  "cpu_weight": 15000000,
  "net_weight": 10000000,
  "ram_quota": 1018847,
}
`;

exports[`System should set platforms 4`] = `
Object {
  "cpu_weight": 1000000,
  "net_weight": 100000,
  "ram_quota": 1000000,
}
`;

exports[`System should set platforms 5`] = `
Object {
  "cpu_weight": 10000,
  "net_weight": 200000,
  "ram_quota": 1000000,
}
`;

exports[`System should set platforms 6`] = `
Object {
  "cpu_weight": 70000,
  "net_weight": 200000,
  "ram_quota": 1000000,
}
`;

exports[`System should work correctly with escrow system 1`] = `"assertion failure with message: cant unstake this amount for account at the moment"`;

exports[`System should work correctly with escrow system 2`] = `"assertion failure with message: cant unstake this amount for account at the moment"`;

exports[`System should work correctly with escrow system 3`] = `
Array [
  Object {
    "more": false,
    "rows": Array [
      Object {
        "cpu_weight": "11999999200.0000 SNAX",
        "from": "snax.team",
        "net_weight": "2999999800.0000 SNAX",
        "to": "snax.team",
      },
    ],
  },
]
`;

exports[`System should work correctly with escrow system after initialization 1`] = `
Array [
  Object {
    "more": false,
    "rows": Array [
      Object {
        "cpu_weight": "11700199200.0000 SNAX",
        "from": "snax.team",
        "net_weight": "1800799800.0000 SNAX",
        "to": "snax.team",
      },
    ],
  },
]
`;

exports[`System should work correctly with escrow system after initialization 2`] = `
Array [
  Array [
    Object {
      "amount": "20.0000 SNAX",
      "owner": "test.transf",
      "period_count": 10,
    },
  ],
]
`;
